--- a/index.html
+++ b/index.html
@@ -8,5 +8,8 @@
   </head>
   <body>
     <!-- Your code here -->
+    <img src="https://images.pexels.com/photos/2836719/pexels-photo-2836719.jpeg?auto=compress&cs=tinysrgb&w=400">
+    <img src="https://images.pexels.com/photos/2880718/pexels-photo-2880718.jpeg?auto=compress&cs=tinysrgb&w=400" alt="a coastline">
+    <img src="https://media.istockphoto.com/id/91772501/photo/beautiful-peacock.jpg?s=612x612&w=is&k=20&c=BKiYzngwAAiJ3Xa2g8VXpGtXo3OnjXv50xW7ddr0XQg=" alt="a peacock" title="a magestic peacock">
   </body>
 </html>
